# EmlParser

./: Cargo.toml  README.md  dfa_definition.txt
examples/: parse.rs
src/: .parser.txt.swp  eml.rs  errors.rs  lib.rs  main.rs  parser.rs
test_emails/: 1.eml  2.eml  3.eml  4.eml  5.eml  6.eml  7.eml  8.eml  9.eml  readme.md  rfc2047.eml
