[package]
name = "EmlParser"
version = "0.1.0"
authors = ["Adam Shirey <adam.shirey@gmail.com>"]
edition = "2018"
description = "A library for parsing .eml files."
readme = "README.md"
homepage = "https://github.com/aeshirey/EmlParser/"
repository = "https://github.com/aeshirey/EmlParser/"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["eml", "parse", "email-parsing", "email"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
