[package]
name = "eml-parser"
version = "0.1.2"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"
description = "A library for parsing .eml files."
readme = "README.md"
homepage = "https://github.com/aeshirey/EmlParser/"
repository = "https://github.com/aeshirey/EmlParser/"
license-file = "LICENSE"
keywords = ["eml", "parse", "email-parsing", "email"]
exclude = [
	"test_emails/*",
	"dfa_definition.txt",
	"transition_graph.png",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
